分支切换的依赖清理

--- a/packages/reactivity/index.html
+++ b/packages/reactivity/index.html
@@ -21,11 +21,15 @@
     })
 
     effect(() => {
-      app.innerHTML = person.name + person.name
+      console.log('run')
+      app.innerHTML = person.flag ? person.name : person.age;
     })
 
     setTimeout(() => {
       person.flag = false;
+      setTimeout(() => {
+        person.name = 'wanger'
+      })
     }, 1000)
 
   </script>
