--- a/packages/reactivity/index.html
+++ b/packages/reactivity/index.html
@@ -20,9 +20,10 @@
       flag: true
     })
 
+    // 进入effect，收集age依赖，当age改变又触发fn，导致无限循环
     const runner = effect(() => {
-      console.log('run')
-      app.innerHTML = person.flag ? person.name : person.age;
+      app.innerHTML = person.age;
+      person.age = person.age + 1;
     }, {
       scheduler: () => {
         console.log('myself fn');
@@ -31,13 +32,7 @@
     })
 
     setTimeout(() => {
-      person.flag = false;
-      setTimeout(() => {
-        // 更新俩属性，会触发两个属性的set，而两个触发都会去触发trigger，导致副作用fn执行两次
-        // 后续优化可以在scheduler中进行批处理
-        person.name = 'wanger';
-        person.age++;
-      })
+
     }, 1000)
 
   </script>
