--- a/packages/reactivity/index.html
+++ b/packages/reactivity/index.html
@@ -10,41 +10,53 @@
 <body>
   <div id="app"></div>
   <script type="module">
-    // import {
-    //   reactive,
-    //   effect,
-    //   ref,
-    //   toRef,
-    //   toRefs
-    // } from "../../../node_modules/@vue/reactivity/dist/reactivity.esm-browser.js";
     import {
       reactive,
       effect,
       ref,
       toRef,
       toRefs,
-      proxyRefs
-    } from "./dist/reactivity.js";
+      computed
+    } from "../../../node_modules/@vue/reactivity/dist/reactivity.esm-browser.js";
+    // import {
+    //   reactive,
+    //   effect,
+    //   ref,
+    //   toRef,
+    //   toRefs,
+    //   proxyRefs
+    // } from "./dist/reactivity.js";
 
     const app = document.querySelector("#app");
 
-    let state = reactive({
-      count: 0,
-      nested: {
-        foo: "bar"
-      }
+    // 计算属性
+    const state = reactive({
+      name: 'zhangsan'
     });
 
-    const obj = toRefs(state);
+    const aliasName = computed(() => {
+      console.log('计算属性被调用了');
+      return 'hello ' + state.name;
+    });
 
-    const proxy = proxyRefs({...obj})
-    console.log(proxy.count)
-    proxy.count++;
-    console.log(proxy.count)
-    console.log(obj)
-    console.log(state)
+    // 依赖没有更改的情况下，多次取值只会执行一次计算
+    console.log(aliasName.value);
+    console.log(aliasName.value);
+    console.log(aliasName.value);
+    console.log(aliasName.value);
+
     effect(() => {
+      console.log(aliasName.value);
+      console.log(aliasName.value);
+      console.log(aliasName.value);
     })
+
+    // 计算属性维护了一个dirty属性，默认true，运行一次计算逻辑后变为false
+    // 当依赖的响应式数据发生变化时，会把dirty重新设置为true
+
+    // 计算属性也是个effect，依赖的属性会收这个计算属性，当值发生改变后，会把计算属性的dirty重新设置为true
+
+    // 计算属性具备收集能力，可以收集对应的effect，依赖的值变化后会触发effect重新执行
 
 
   </script>
