--- a/packages/reactivity/index.html
+++ b/packages/reactivity/index.html
@@ -18,6 +18,16 @@
     //   toRefs,
     //   computed
     // } from "../../../node_modules/@vue/reactivity/dist/reactivity.esm-browser.js";
+    // import {
+    //   reactive,
+    //   effect,
+    //   ref,
+    //   toRef,
+    //   toRefs,
+    //   computed,
+    //   watch
+    // } from '../../../node_modules/vue/dist/vue.esm-browser.js'
+
     import {
       reactive,
       effect,
@@ -25,67 +35,30 @@
       toRef,
       toRefs,
       proxyRefs,
-      computed
+      computed,
+      watch
     } from "./dist/reactivity.js";
 
     const app = document.querySelector("#app");
 
     // 计算属性
     const state = reactive({
-      name: 'zhangsan'
+      name: 'zhangsan',
+      job: {
+        name: 'kaifa'
+      }
     });
 
-    // const aliasName = computed(() => {
-    //   console.log('计算属性被调用了');
-    //   return 'hello ' + state.name;
-    // });
-    //
-    // // 依赖没有更改的情况下，多次取值只会执行一次计算
-    // console.log(aliasName.value);
-    // console.log(aliasName.value);
-    // console.log(aliasName.value);
-    // console.log(aliasName.value);
-    //
-    // effect(() => {
-    //   console.log(aliasName.value);
-    //   console.log(aliasName.value);
-    //   console.log(aliasName.value);
-    // })
 
-    // 计算属性维护了一个dirty属性，默认true，运行一次计算逻辑后变为false
-    // 当依赖的响应式数据发生变化时，会把dirty重新设置为true
-
-    // 计算属性也是个effect，依赖的属性会收这个计算属性，当值发生改变后，会把计算属性的dirty重新设置为true
-
-    // 计算属性具备收集能力，可以收集对应的effect，依赖的值变化后会触发effect重新执行
-
-    // computed的另外一种写法
-    const sayHello = computed({
-      get(oldValue) {
-        console.log('get old value: ', oldValue);
-        return 'hello ' + state.name;
-      },
-      set(newValue) {
-        console.log('set', newValue);
-      }
+    watch(state, (oldVal, newVal) => {
+      console.log('watch', oldVal, newVal);
+    }, {
+      deep: false
     })
 
-    effect(() => {
-      console.log(sayHello.value);
-      console.log(sayHello.value);
-      console.log(sayHello.value);
-    });
-
-    effect(() => {
-      console.log('2: ' + sayHello.value);
-      console.log('2: ' + sayHello.value);
-      console.log('2: ' + sayHello.value);
-    });
-    console.log(sayHello.dep)
-
     setTimeout(() => {
-      state.name = 'lisi'
-    }, 1000)
+      state.job.name = 'ceshi'
+    }, 2000)
 
 
   </script>
