组件中的代理对象

--- a/packages/runtime-dom/index.html
+++ b/packages/runtime-dom/index.html
@@ -39,10 +39,10 @@
     },
 
     render(proxy) {
-      console.log(arguments);
+      console.log(proxy)
       return h('div', {}, [
         h('p', {}, 'name: ' + this.name),
-        h('p', {}, 'age: ' + this.age)
+        h('p', {}, 'age: ' + this.b)
       ])
     }
   }
