组件中的代理对象----代码整理

--- a/packages/runtime-dom/index.html
+++ b/packages/runtime-dom/index.html
@@ -42,7 +42,7 @@
       console.log(proxy)
       return h('div', {}, [
         h('p', {}, 'name: ' + this.name),
-        h('p', {}, 'age: ' + this.b)
+        h('p', {}, 'age: ' + this.$attrs.b)
       ])
     }
   }
